build_log_render_reflect.txt

> Configure project :
Fabric Loom: 1.15.4

> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileClientJava FAILED
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:469: error: 'else' without 'if'
									} else {
									  ^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:473: error: ')' or ',' expected
								}
								 ^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:475: error: ';' expected
							}))
							  ^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:583: error: ';' expected
									}))));
									    ^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:856: error: illegal start of type
		});
		 ^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:860: error: unnamed classes are a preview feature and are disabled by default.
	private Component createToggle(String name, boolean enabled) {
	        ^
  (use --enable-preview to enable unnamed classes)
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:885: error: class, interface, enum, or record expected
}
^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:1: error: unnamed class should not have package declaration
package me.bombo.bomboaddons;
^
8 errors


[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:860: error: unnamed classes are a preview feature and are disabled by default.
  	private Component createToggle(String name, boolean enabled) {
  	        ^
    (use --enable-preview to enable unnamed classes)
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:469: error: 'else' without 'if'
  									} else {
  									  ^
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:473: error: ')' or ',' expected
  								}
  								 ^
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:885: error: class, interface, enum, or record expected
  }
  ^
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:856: error: illegal start of type
  		});
  		 ^
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:1: error: unnamed class should not have package declaration
  package me.bombo.bomboaddons;
  ^
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:475: error: ';' expected
  							}))
  							  ^
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:583: error: ';' expected
  									}))));
  									    ^
  8 errors


Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
3 actionable tasks: 1 executed, 2 up-to-date
* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 3s
